fold/size for sequential flows